# hello-rocket

./: .gitignore  Cargo.toml
cookies/: Cargo.toml
cookies/requests/: done.http  find.http  index.http
cookies/src/: main.rs  models.rs  routes.rs
experiments/: Cargo.toml
experiments/src/: main.rs
experiments/strings/: welcome.txt
in-memory/: Cargo.toml
in-memory/src/: errors.rs  main.rs  models.rs  routes.rs
minimal/: Cargo.toml  Rocket.toml
minimal/src/: main.rs
sqlite/: Cargo.toml  build.rs
sqlite/src/: errors.rs  main.rs  routes.rs
sqlite/strings/: welcome.txt
