[package]
name = "experiments"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
thiserror = "*"
serde = "*"
log = "*"

[dependencies.sqlx]
version = "*"
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros", "offline", "migrate"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["sqlite_pool"]